# noted

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  extension.toml  zed-md-wysiwyg-spec.md
.github/workflows/: ci.yml  release.yml
crates/noted-lsp/: Cargo.toml
crates/noted-lsp/src/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  hover.rs  inlay_hints.rs  main.rs  preview.rs  rename.rs  render.rs  semantic_tokens.rs  symbols.rs  workspace_symbols.rs
crates/noted-lsp/src/vault/: index.rs  mod.rs  parser.rs  scanner.rs
grammars/noted/src/: grammar.json  node-types.json  parser.c
grammars/tree-sitter-noted/: grammar.js  package.json
grammars/tree-sitter-noted/test/corpus/: checkboxes.txt  embeds.txt  tags.txt
grammars/tree-sitter-obsidian-md/: grammar.js  package.json
grammars/tree-sitter-obsidian-md/test/corpus/: callouts.txt  headings.txt  wikilinks.txt
languages/noted/: config.toml  highlights.scm  injections.scm  outline.scm  semantic_token_rules.json
languages/obsidian-md/: config.toml  folds.scm  highlights.scm
src/: lib.rs
tests/fixtures/vault/: broken-links.md  callouts-test.md  index.md  math-test.md  showcase.md  table-test.md
tests/fixtures/vault/daily/: 2026-04-04.md  2026-04-05.md
tests/fixtures/vault/people/: alice.md
tests/fixtures/vault/projects/: rust-learning.md  zed-plugin.md
tests/fixtures/vault/templates/: daily.md
