[package]
name = "noted-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "noted-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
walkdir = "2"
pulldown-cmark = "0.12"
camino = "1"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
futures = "0.3"
